grammarProyectoParser.py
# Generated from grammarProyecto.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class grammarProyectoParser ( Parser ):

    grammarFileName = "grammarProyecto.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'crear'", "'entero'", "'flotante'", "'cadena'", 
                     "'booleano'", "'si'", "'entonces'", "'sino'", "'para'", 
                     "'hasta'", "'incremento'", "'decremento'", "'mientras'", 
                     "'funcion'", "'retornar'", "'inicio'", "'fin'", "'arreglo'", 
                     "'matriz'", "'leer'", "'escribir'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'='", "'('", "')'", "':'", "','", "';'", "'['", "']'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'y'", 
                     "'o'", "'no'", "'verdadero'", "'falso'" ]

    symbolicNames = [ "<INVALID>", "CREAR", "ENTERO", "FLOTANTE", "CADENA", 
                      "BOOLEANO", "SI", "ENTONCES", "SINO", "PARA", "HASTA", 
                      "INCREMENTO", "DECREMENTO", "MIENTRAS", "FUNCION", 
                      "RETORNAR", "INICIO", "FIN", "ARREGLO", "MATRIZ", 
                      "LEER", "ESCRIBIR", "ID", "CONT", "FLOAT", "STRING", 
                      "PLUS", "MINUS", "MULT", "DIVI", "EQUALS", "LPAREN", 
                      "RPAREN", "COLON", "COMMA", "SEMICOLON", "LBRACKET", 
                      "RBRACKET", "WS", "INDENT", "NEWLINE", "COMMENT", 
                      "IGUAL", "DIFERENTE", "MAYOR", "MENOR", "MAYOR_IGUAL", 
                      "MENOR_IGUAL", "AND", "OR", "NOT", "VERDADERO", "FALSO" ]

    RULE_program = 0
    RULE_main_function = 1
    RULE_function = 2
    RULE_function_declaration = 3
    RULE_return = 4
    RULE_return_value = 5
    RULE_param_list = 6
    RULE_param = 7
    RULE_code_block = 8
    RULE_type = 9
    RULE_statement = 10
    RULE_declaration = 11
    RULE_assignment = 12
    RULE_conditional = 13
    RULE_sino = 14
    RULE_boolean_expr = 15
    RULE_para_loop = 16
    RULE_direction = 17
    RULE_mientras_loop = 18
    RULE_expr = 19
    RULE_term = 20
    RULE_factor = 21
    RULE_function_call = 22
    RULE_arg_list = 23
    RULE_literal = 24
    RULE_comparation_operator = 25
    RULE_output = 26
    RULE_input = 27
    RULE_tensor_declaration = 28
    RULE_tensor_dimensions = 29
    RULE_tensor_init = 30
    RULE_tensor_acces = 31

    ruleNames =  [ "program", "main_function", "function", "function_declaration", 
                   "return", "return_value", "param_list", "param", "code_block", 
                   "type", "statement", "declaration", "assignment", "conditional", 
                   "sino", "boolean_expr", "para_loop", "direction", "mientras_loop", 
                   "expr", "term", "factor", "function_call", "arg_list", 
                   "literal", "comparation_operator", "output", "input", 
                   "tensor_declaration", "tensor_dimensions", "tensor_init", 
                   "tensor_acces" ]

    EOF = Token.EOF
    CREAR=1
    ENTERO=2
    FLOTANTE=3
    CADENA=4
    BOOLEANO=5
    SI=6
    ENTONCES=7
    SINO=8
    PARA=9
    HASTA=10
    INCREMENTO=11
    DECREMENTO=12
    MIENTRAS=13
    FUNCION=14
    RETORNAR=15
    INICIO=16
    FIN=17
    ARREGLO=18
    MATRIZ=19
    LEER=20
    ESCRIBIR=21
    ID=22
    CONT=23
    FLOAT=24
    STRING=25
    PLUS=26
    MINUS=27
    MULT=28
    DIVI=29
    EQUALS=30
    LPAREN=31
    RPAREN=32
    COLON=33
    COMMA=34
    SEMICOLON=35
    LBRACKET=36
    RBRACKET=37
    WS=38
    INDENT=39
    NEWLINE=40
    COMMENT=41
    IGUAL=42
    DIFERENTE=43
    MAYOR=44
    MENOR=45
    MAYOR_IGUAL=46
    MENOR_IGUAL=47
    AND=48
    OR=49
    NOT=50
    VERDADERO=51
    FALSO=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main_function(self):
            return self.getTypedRuleContext(grammarProyectoParser.Main_functionContext,0)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarProyectoParser.FunctionContext)
            else:
                return self.getTypedRuleContext(grammarProyectoParser.FunctionContext,i)


        def getRuleIndex(self):
            return grammarProyectoParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = grammarProyectoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.main_function()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 65
                self.function()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_functionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INICIO(self):
            return self.getToken(grammarProyectoParser.INICIO, 0)

        def COLON(self):
            return self.getToken(grammarProyectoParser.COLON, 0)

        def code_block(self):
            return self.getTypedRuleContext(grammarProyectoParser.Code_blockContext,0)


        def FIN(self):
            return self.getToken(grammarProyectoParser.FIN, 0)

        def SEMICOLON(self):
            return self.getToken(grammarProyectoParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return grammarProyectoParser.RULE_main_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain_function" ):
                listener.enterMain_function(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain_function" ):
                listener.exitMain_function(self)




    def main_function(self):

        localctx = grammarProyectoParser.Main_functionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_main_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(grammarProyectoParser.INICIO)
            self.state = 72
            self.match(grammarProyectoParser.COLON)
            self.state = 73
            self.code_block()
            self.state = 74
            self.match(grammarProyectoParser.FIN)
            self.state = 75
            self.match(grammarProyectoParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_declaration(self):
            return self.getTypedRuleContext(grammarProyectoParser.Function_declarationContext,0)


        def code_block(self):
            return self.getTypedRuleContext(grammarProyectoParser.Code_blockContext,0)


        def return_(self):
            return self.getTypedRuleContext(grammarProyectoParser.ReturnContext,0)


        def FIN(self):
            return self.getToken(grammarProyectoParser.FIN, 0)

        def SEMICOLON(self):
            return self.getToken(grammarProyectoParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return grammarProyectoParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = grammarProyectoParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.function_declaration()
            self.state = 78
            self.code_block()
            self.state = 79
            self.return_()
            self.state = 80
            self.match(grammarProyectoParser.FIN)
            self.state = 81
            self.match(grammarProyectoParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCION(self):
            return self.getToken(grammarProyectoParser.FUNCION, 0)

        def ID(self):
            return self.getToken(grammarProyectoParser.ID, 0)

        def LPAREN(self):
            return self.getToken(grammarProyectoParser.LPAREN, 0)

        def param_list(self):
            return self.getTypedRuleContext(grammarProyectoParser.Param_listContext,0)


        def RPAREN(self):
            return self.getToken(grammarProyectoParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(grammarProyectoParser.COLON, 0)

        def getRuleIndex(self):
            return grammarProyectoParser.RULE_function_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_declaration" ):
                listener.enterFunction_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_declaration" ):
                listener.exitFunction_declaration(self)




    def function_declaration(self):

        localctx = grammarProyectoParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(grammarProyectoParser.FUNCION)
            self.state = 84
            self.match(grammarProyectoParser.ID)
            self.state = 85
            self.match(grammarProyectoParser.LPAREN)
            self.state = 86
            self.param_list()
            self.state = 87
            self.match(grammarProyectoParser.RPAREN)
            self.state = 88
            self.match(grammarProyectoParser.COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETORNAR(self):
            return self.getToken(grammarProyectoParser.RETORNAR, 0)

        def return_value(self):
            return self.getTypedRuleContext(grammarProyectoParser.Return_valueContext,0)


        def getRuleIndex(self):
            return grammarProyectoParser.RULE_return

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn" ):
                listener.enterReturn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn" ):
                listener.exitReturn(self)




    def return_(self):

        localctx = grammarProyectoParser.ReturnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_return)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(grammarProyectoParser.RETORNAR)
            self.state = 91
            self.return_value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(grammarProyectoParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(grammarProyectoParser.SEMICOLON, 0)

        def ID(self):
            return self.getToken(grammarProyectoParser.ID, 0)

        def getRuleIndex(self):
            return grammarProyectoParser.RULE_return_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_value" ):
                listener.enterReturn_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_value" ):
                listener.exitReturn_value(self)




    def return_value(self):

        localctx = grammarProyectoParser.Return_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_return_value)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.expr()
                self.state = 94
                self.match(grammarProyectoParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.match(grammarProyectoParser.ID)
                self.state = 97
                self.match(grammarProyectoParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarProyectoParser.TypeContext)
            else:
                return self.getTypedRuleContext(grammarProyectoParser.TypeContext,i)


        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarProyectoParser.ParamContext)
            else:
                return self.getTypedRuleContext(grammarProyectoParser.ParamContext,i)


        def tensor_dimensions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarProyectoParser.Tensor_dimensionsContext)
            else:
                return self.getTypedRuleContext(grammarProyectoParser.Tensor_dimensionsContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(grammarProyectoParser.COMMA)
            else:
                return self.getToken(grammarProyectoParser.COMMA, i)

        def getRuleIndex(self):
            return grammarProyectoParser.RULE_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list" ):
                listener.enterParam_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list" ):
                listener.exitParam_list(self)




    def param_list(self):

        localctx = grammarProyectoParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 3, 4, 5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.type_()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==36:
                    self.state = 101
                    self.tensor_dimensions()
                    self.state = 106
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 107
                self.param()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==34:
                    self.state = 108
                    self.match(grammarProyectoParser.COMMA)
                    self.state = 109
                    self.type_()
                    self.state = 113
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==36:
                        self.state = 110
                        self.tensor_dimensions()
                        self.state = 115
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 116
                    self.param()
                    self.state = 122
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(grammarProyectoParser.ID, 0)

        def getRuleIndex(self):
            return grammarProyectoParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = grammarProyectoParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(grammarProyectoParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Code_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarProyectoParser.StatementContext)
            else:
                return self.getTypedRuleContext(grammarProyectoParser.StatementContext,i)


        def getRuleIndex(self):
            return grammarProyectoParser.RULE_code_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCode_block" ):
                listener.enterCode_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCode_block" ):
                listener.exitCode_block(self)




    def code_block(self):

        localctx = grammarProyectoParser.Code_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_code_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 7348802) != 0):
                self.state = 128
                self.statement()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTERO(self):
            return self.getToken(grammarProyectoParser.ENTERO, 0)

        def FLOTANTE(self):
            return self.getToken(grammarProyectoParser.FLOTANTE, 0)

        def CADENA(self):
            return self.getToken(grammarProyectoParser.CADENA, 0)

        def BOOLEANO(self):
            return self.getToken(grammarProyectoParser.BOOLEANO, 0)

        def getRuleIndex(self):
            return grammarProyectoParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = grammarProyectoParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 60) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(grammarProyectoParser.DeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(grammarProyectoParser.AssignmentContext,0)


        def output(self):
            return self.getTypedRuleContext(grammarProyectoParser.OutputContext,0)


        def input_(self):
            return self.getTypedRuleContext(grammarProyectoParser.InputContext,0)


        def conditional(self):
            return self.getTypedRuleContext(grammarProyectoParser.ConditionalContext,0)


        def para_loop(self):
            return self.getTypedRuleContext(grammarProyectoParser.Para_loopContext,0)


        def mientras_loop(self):
            return self.getTypedRuleContext(grammarProyectoParser.Mientras_loopContext,0)


        def tensor_declaration(self):
            return self.getTypedRuleContext(grammarProyectoParser.Tensor_declarationContext,0)


        def getRuleIndex(self):
            return grammarProyectoParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = grammarProyectoParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statement)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 138
                self.output()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 139
                self.input_()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 140
                self.conditional()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 141
                self.para_loop()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 142
                self.mientras_loop()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 143
                self.tensor_declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREAR(self):
            return self.getToken(grammarProyectoParser.CREAR, 0)

        def type_(self):
            return self.getTypedRuleContext(grammarProyectoParser.TypeContext,0)


        def ID(self):
            return self.getToken(grammarProyectoParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(grammarProyectoParser.SEMICOLON, 0)

        def EQUALS(self):
            return self.getToken(grammarProyectoParser.EQUALS, 0)

        def expr(self):
            return self.getTypedRuleContext(grammarProyectoParser.ExprContext,0)


        def getRuleIndex(self):
            return grammarProyectoParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = grammarProyectoParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(grammarProyectoParser.CREAR)
            self.state = 147
            self.type_()
            self.state = 148
            self.match(grammarProyectoParser.ID)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 149
                self.match(grammarProyectoParser.EQUALS)
                self.state = 150
                self.expr()


            self.state = 153
            self.match(grammarProyectoParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(grammarProyectoParser.ID, 0)

        def EQUALS(self):
            return self.getToken(grammarProyectoParser.EQUALS, 0)

        def SEMICOLON(self):
            return self.getToken(grammarProyectoParser.SEMICOLON, 0)

        def expr(self):
            return self.getTypedRuleContext(grammarProyectoParser.ExprContext,0)


        def tensor_init(self):
            return self.getTypedRuleContext(grammarProyectoParser.Tensor_initContext,0)


        def getRuleIndex(self):
            return grammarProyectoParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = grammarProyectoParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(grammarProyectoParser.ID)
            self.state = 156
            self.match(grammarProyectoParser.EQUALS)
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22, 23, 24, 25, 31, 51, 52]:
                self.state = 157
                self.expr()
                pass
            elif token in [36]:
                self.state = 158
                self.tensor_init()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 161
            self.match(grammarProyectoParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SI(self):
            return self.getToken(grammarProyectoParser.SI, 0)

        def boolean_expr(self):
            return self.getTypedRuleContext(grammarProyectoParser.Boolean_exprContext,0)


        def ENTONCES(self):
            return self.getToken(grammarProyectoParser.ENTONCES, 0)

        def COLON(self):
            return self.getToken(grammarProyectoParser.COLON, 0)

        def code_block(self):
            return self.getTypedRuleContext(grammarProyectoParser.Code_blockContext,0)


        def sino(self):
            return self.getTypedRuleContext(grammarProyectoParser.SinoContext,0)


        def FIN(self):
            return self.getToken(grammarProyectoParser.FIN, 0)

        def SEMICOLON(self):
            return self.getToken(grammarProyectoParser.SEMICOLON, 0)
